Fix misaligned UI due to different component heights

--- a/ui/components-react/src/components-react/filter-builder/FilterBuilderRule.scss
+++ b/ui/components-react/src/components-react/filter-builder/FilterBuilderRule.scss
@@ -26,11 +26,22 @@
     width: 15rem;
     display: flex;
     flex-direction: column;
+
+    >span {
+      .components-text-editor {
+        height: unset;
+      }
+    }
   }
 
   .fb-row-toolbar {
     width: var(--toolbar-width);
     margin-left: auto;
     justify-content: space-between;
+    height: 26px;
+
+    >button {
+      height: 100%;
+    }
   }
 }
